// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withdrawal GET /new should render the withdrawal request upload page with a file upload component 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds top-errors-hook"></div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062 - withdraw appeal</span>
            <h1             class="govuk-heading-l">Request to withdraw appeal</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <div class="govuk-grid-row pins-file-upload" data-next-page-url="/appeals-service/appeal-details/1/withdrawal/check-details"
            data-form-id="1" data-case-id="1" data-case-reference="APP/Q9999/D/21/351062"
            data-folder-id="437" data-document-type="appellantCaseWithdrawalLetter"
            data-document-stage="appellant-case" data-blob-storage-host="https://127.0.0.1:10000/devstoreaccount1"
            data-blob-storage-container="document-service-uploads" data-allowed-types="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
            data-formatted-allowed-types="PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF">
                <form method="POST" novalidate="novalidate" class="govuk-grid-column-two-thirds"
                data-filenames-in-folder="">
                    <div class="pins-file-upload__container">
                        <div class="govuk-body pins-file-upload__instructions"><span>The file must be a PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX, MSG, JPG, JPEG, MPEG, MP3, MP4, MOV, PNG, TIF or TIFF and smaller than 100MB.</span>
                        </div>
                        <div class="middle-errors-hook">
                            <h2 class="pins-file-upload__container-title">Upload request to withdraw appeal</h2>
                            <div class="pins-file-upload__upload">
                                <input class="display--none" id="upload-file-1" accept="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-outlook,image/jpeg,image/jpeg,video/mpeg,audio/mpeg,video/mp4,video/quicktime,image/png,image/tiff,image/tiff"
                                type="file" name="files" value="Choose file" aria-controls="file-list-1">
                                <div>
                                    <button type='button' class="pins-file-upload__button govuk-button--secondary"
                                    data-cy="upload-file-button" id="upload-file-button-1">Choose file</button><span class='govuk-body pins-file-upload__dropzone-text'>or drop file</span>
                                </div>
                            </div>
                            <div id="file-list-1">
                                <h2 class="display--sr-only" id="file-list-title-1">List of files to upload</h2>
                                <ul class="pins-file-upload__files-rows" aria-describedby="file-list-title-1"
                                aria-live="polite"></ul>
                            </div>
                        </div>
                    </div>
                    <div class="display--flex">
                        <button type="submit" class="govuk-button pins-file-upload__submit" data-module="govuk-button"
                        id="submit-button-1">Continue</button>
                        <div class="progress-hook"></div>
                    </div>
                </form>
            </div>
        </div>
    </div>
</main>"
`;

exports[`withdrawal GET /view should render a 404 error page for the view withdrawal request document folder page of the appeal that is not withdrawn 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Page not found</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">If you typed the web address, check it is correct.</p>
            <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
            <p             class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists</p>
        </div>
    </div>
</main>"
`;

exports[`withdrawal GET /view should render the view withdrawal request document folder 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Manage folder</span>
            <h1 class="govuk-heading-l">Appeal withdrawal request</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table" id="documents-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Name</th>
                        <th scope="col" class="govuk-table__header">Request date</th>
                        <th scope="col" class="govuk-table__header">Redaction status</th>
                        <th scope="col" class="govuk-table__header">Actions</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell">
                            <div class="govuk-!-margin-bottom-4"><a class="govuk-link" href="/documents/38/download/614dbbaa-da49-40df-8e39-e6f299225425/withdrawal-request-document.pdf"
                                target="_blank">withdrawal-request-document.pdf</a>
                            </div>
                            <dl class="govuk-body govuk-!-font-size-16 pins-inline-definition-list"><dt>File type and size:&nbsp;</dt>
                                <dd>PDF, 3 KB</dd>
                            </dl>
                        </td>
                        <td class="govuk-table__cell">8 July 2024</td>
                        <td class="govuk-table__cell">No redaction required</td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/documents/38/download/614dbbaa-da49-40df-8e39-e6f299225425/withdrawal-request-document.pdf"
                            target="_blank">View<span class="govuk-visually-hidden"> document</span></a>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
</main>"
`;

exports[`withdrawal GET /withdrawal/check-your-answers should render the check your asnwers page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and withdraw appeal</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Request to withdraw appeal</dt>
                            <dd                             class="govuk-summary-list__value"><a class="govuk-link" href="/documents/APP/Q9999/D/21/351062/download-uncommitted/1/test-document.txt"
                                target="_blank">test-document.txt</a>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/withdrawal/new">Change<span class="govuk-visually-hidden"> withdrawal request</span></a>
                                </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <details class="govuk-details">
                                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                                    </summary>
                                    <div class="govuk-details__text">
                                        <div class="pins-notify-preview-border">
                                            <h2>Appeal details</h2>
                                            <div class="govuk-inset-text">Appeal reference number: 134526
                                                <br>Address: 96 The Avenue, Leftfield, Maidstone, Kent, MD21 5XY, United Kingdom
                                                <br>Planning application reference: 48269/APP/2021/1482
                                                <br>
                                            </div>
                                            <h2>Appeal withdrawn</h2>We have withdrawn the appeal following your request on 01 January 2025.
                                            <br>
                                            <br>
                                            <h2>What happens next</h2>We have closed the appeal and cancelled the site visit.
                                            <br>
                                            <br>
                                            <h2>Feedback</h2>We welcome your feedback on our appeals process. Tell us on this short
                                            <a                                             href="https://forms.office.com/pages/responsepage.aspx?id=mN94WIhvq0iTIpmM5VcIjfMZj__F6D9LmMUUyoUrZDZUOERYMEFBN0NCOFdNU1BGWEhHUFQxWVhUUy4u"
                                            class="govuk-link">feedback form</a>.
                                                <br>
                                                <br>The Planning Inspectorate
                                                <br>
                                                <br>caseofficers@planninginspectorate.gov.uk
                                                <br>
                                                <br>
                                        </div>
                                    </div>
                                </details>
                            </div>
                        </div>
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <details class="govuk-details">
                                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                                    </summary>
                                    <div class="govuk-details__text">
                                        <div class="pins-notify-preview-border">We have withdrawn the appeal after the appellant's request.
                                            <br>
                                            <br>
                                            <h2>Appeal details</h2>
                                            <div class="govuk-inset-text">Appeal reference number: 234567
                                                <br>Address: 98 The Avenue, Leftfield, Maidstone, Kent, MD21 5YY, United Kingdom
                                                <br>Planning application reference: 48269/APP/2021/1483
                                                <br>
                                            </div>
                                            <h2>What happens next</h2>We have closed the appeal and cancelled the site visit.
                                            <br>
                                            <br>
                                            <h2>Feedback</h2>We welcome your feedback on our appeals process. Tell us on this short
                                            <a                                             href="https://forms.office.com/pages/responsepage.aspx?id=mN94WIhvq0iTIpmM5VcIjfMZj__F6D9LmMUUyoUrZDZUOERYMEFBN0NCOFdNU1BGWEhHUFQxWVhUUy4u"
                                            class="govuk-link">feedback form</a>.
                                                <br>
                                                <br>The Planning Inspectorate
                                                <br>
                                                <br>caseofficers@planninginspectorate.gov.uk
                                                <br>
                                                <br>
                                        </div>
                                    </div>
                                </details>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Withdraw appeal</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`withdrawal POST /new should render a 500 error page if request body upload-info is in an incorrect format 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;
